hphp/test/zend/good/ext/simplexml/tests/sxe_004.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('simplexml')) print 'skip';
if (!extension_loaded("libxml")) print "skip LibXML not present";
}
