hphp/test/zend/bad/ext/curl/tests/curl_multi_getcontent_basic3.php.skipif
<?php
if (!extension_loaded('curl')) print 'skip need ext/curl';
if (false === getenv('PHP_CURL_HTTP_REMOTE_SERVER'))  {
	exit("skip PHP_CURL_HTTP_REMOTE_SERVER env variable is not defined");
}
?>